@@ -11,7 +11,8 @@
   * conda search now shows the channel that the package comes from
   * conda search has a new --platform flag for searching for packages in other
     platforms.
-
+  * add ability to export multi-processor-build flags
+  
 
 2014-01-17   2.3.1:
 -------------------
